--- a/ML_ZoomCamp_A1.ipynb
+++ b/ML_ZoomCamp_A1.ipynb
@@ -6,7 +6,7 @@
       "name": "ML_ZoomCamp_A1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNjJVGUM7Euf+f411qfvGpQ",
+      "authorship_tag": "ABX9TyNlB25+I8IBLYEtWtzFcWqJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -208,7 +208,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pXGYtVKyG0Pr",
-        "outputId": "75240761-a372-4e80-e072-907039451536"
+        "outputId": "3430e78b-f0b4-4774-88cf-ebff59942ca0"
       },
       "source": [
         "criteria_6 = (df['Make'] == \"Rolls-Royce\")\n",
@@ -217,17 +217,15 @@
         "#type(X)\n",
         "XTX = np.dot(X.T, X)\n",
         "inv_XTX = np.linalg.inv(XTX)\n",
-        "print(XTX + inv_XTX)"
+        "print(sum(XTX.reshape(-1,1)))"
       ],
-      "execution_count": 54,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[1.75480100e+06 3.96560009e+04 6.51959981e+04]\n",
-            " [3.96560009e+04 9.28105723e+02 1.49991129e+03]\n",
-            " [6.51959981e+04 1.49991129e+03 2.45410590e+03]]\n"
+            "[1970887.]\n"
           ]
         }
       ]
