--- a/ML_Zoomcamp_A6.ipynb
+++ b/ML_Zoomcamp_A6.ipynb
@@ -1863,50 +1863,16 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 238
-        },
-        "id": "rNxc9s2y2WjH",
-        "outputId": "b925d015-69f3-4b59-9fa6-fd5600a06ae3"
-      },
-      "source": [
-        "df = pd.DataFrame(data=None, columns=[\"number\", \"depth\"])\n",
-        "i=0\n",
-        "dict = {\n",
-        "    [10,15,20,25]:estimator_list\n",
-        "}\n",
-        "display(dict)\n"
-      ],
-      "execution_count": 75,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-75-9e4a48b88979>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m dict = {\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0;34m[\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m15\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m25\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mestimator_list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m }\n\u001b[1;32m      6\u001b[0m \u001b[0mdisplay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'list'"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
           "height": 265
         },
         "id": "IBSSq7LZ0MB9",
-        "outputId": "fe859083-8c12-4e5c-a9c2-563f79a962a2"
+        "outputId": "60d8b105-5269-4711-cfd6-5944c1d64183"
       },
       "source": [
         "plt.plot(result_numbr_depth)\n",
-        "pd.DataFrame(estimator_list, [10,15,20,25])\n",
-        "plt.show()"
+        "plt.show()\n"
       ],
-      "execution_count": 63,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "display_data",
